--- a/01.md
+++ b/01.md
@@ -46,11 +46,14 @@
 
 ## プロパティウィンドウの表示方法を以下に記せ
 
+表示メニュー＞プロパティウィンドウを選択
 
+プロパティ＝　＝パラメータ
 
 ## ボタンの文字を「あいさつ」に変更する方法を記せ
 
-
+－ボタンをクリックして選択
+－プロパティウィンドウのtext欄に’あいさつ’と入力して、Enterキー
 
 ## button1を押した時に実行するプログラム
 以下の該当する行に、`// button1の処理` と書き込む。
