--- a/01.md
+++ b/01.md
@@ -55,6 +55,10 @@
 －ボタンをクリックして選択
 －プロパティウィンドウのtext欄に’あいさつ’と入力して、Enterキー
 
+##ボタンで動くプログラムの書き方
+
+
+
 ## button1を押した時に実行するプログラム
 以下の該当する行に、`// button1の処理` と書き込む。
 
@@ -72,7 +76,7 @@ namespace test
 
         private void button1_Click(object sender, EventArgs e)
         {
-
+            //button1の処理
         }
     }
 }
@@ -82,6 +86,8 @@ namespace test
 「こんにちは」というメッセージボックスを表示するプログラムを以下に記せ。
 
 ```cs
+
+    MessageBox。Show("こんにちは");
 
 ```
 
