--- a/03.md
+++ b/03.md
@@ -16,7 +16,7 @@
 
 ## エラー場所を見つける方法
 
-エラー一覧を確認して、上からダブルクリックする。
+
 
 ## ユーザーが処理していない例外 ウィンドウ
 以下のようなエラーが表示された時の対処方法を記せ。
@@ -25,20 +25,19 @@
 
 ### 対処方法
 
-停止ボタン、デバッグメニュー＞デバッグの停止、Shift+F5のいずれかでプログラムを停止。
-
+停止ボタン、デバッグメニュー＞デバッグの停止、SHIFT + F5のいずれかでプログラムを停止。
 
 ## 初心者の代表的なエラー原因
-1. スペル間違い
-2. 全角文字
-3. 書く場所間違い
-4. {}や()の不一致
-5. 実行時のテキストボックスの入力間違い
-6. セミコロン抜け
+1.スペル間違い
+2.全角文字
+3.書く場所間違い
+4.｛｝や（）の不一枚
+5.実行時のテキストボックスの入力間違い
+6.セミコロン抜け
 
 また、 Visual Studio で気を付けなければならないことを以下に記せ
 
-**Visual Studioが自動的に挿入したコードは、絶対に削除も変更もしないこと！！**
+** visual studioが自動的に挿入したコードは、絶対に消しも変更もしないこと **
 
 ---
 
