--- a/05.md
+++ b/05.md
@@ -38,22 +38,22 @@
 ### 以上から考察
 
 - Leftプロパティとは
-  - フォームの左端からボタンの ? までのピクセル数
+  - フォームの左端からボタンの 左端 までのピクセル数
 - Topプロパティとは
-  - フォームの上端からボタンの ? までのピクセル数
+  - フォームの上端からボタンの 上端 までのピクセル数
 - ボタンを左に動かすには、
-  - Leftプロパティの値を ?
+  - Leftプロパティの値を 減らす
 - ボタンを右に動かすには、
-  - ? プロパティの値を ?
+  - left プロパティの値を 増やす
 - ボタンを上に動かすには、
-  - Topプロパティの値を ?
+  - Topプロパティの値を 減らす
 - ボタンを下に動かすには、
-  - ? プロパティの値を ?
+  - トップ プロパティの値を 増やす
 
 ## 演習5-1：Labelを1つと、ボタンを4つ十字に配置して、思いついたことをやってみよう。
 
 ```cs
-
+           
 ```
 
 ## 様々な型のデータをMessageBox.Show()で表示する方法
@@ -61,13 +61,14 @@
 ### string型の こんにちは
 
 ```cs
-
+            MessageBox.Show("こんにちは");
 ```
 
 ### int型の 100
 
 ```cs
-
+        MessageBox.Show(100.ToString());
+            MessageBox.Show($"{100}");
 ```
 
 あるいは
@@ -79,7 +80,8 @@
 ### float型の 3.14
 
 ```cs
-
+        MessageBox.Show(3.14.ToString());
+            MessageBox.Show($"{3.14}");
 ```
 
 あるいは
@@ -91,7 +93,9 @@
 ### int型の 1+1
 
 ```cs
-
+            MessageBox.Show(1+1.ToString());
+            MessageBox.Show((1+1).ToString());
+            MessageBox.Show($"{1+1}");
 ```
 
 あるいは
@@ -103,7 +107,8 @@
 ### float型の 1.23*2.34
 
 ```cs
-
+          MessageBox.Show((1.23f*2.34f).ToString());
+            MessageBox.Show($"{1.23f*2.34f}");
 ```
 
 あるいは
@@ -115,25 +120,25 @@
 ### string型の 1+1
 
 ```cs
-
+            MessageBox.Show("1"+"1");
 ```
 
 ## 複合代入演算子
 
 |処理                   |複合代入演算|算術演算に書き換えると|
 |:---------------------:|:----------|:-----------------|
-|aに5を加える           |            |a = a + 5;         |
-|aから5を引く           |            |a = a - 5;         |
-|aを5倍する             |            |a = a * 5;         |
-|aを5で割る             |            |a = a / 5;         |
-|aを5で割った余りにする   |            |a = a % 5;         |
+|aに5を加える           | a+=5;           |a = a + 5;         |
+|aから5を引く           | a-=5;           |a = a - 5;         |
+|aを5倍する             | a*=5;           |a = a * 5;         |
+|aを5で割る             | a/=5;           |a = a / 5;         |
+|aを5で割った余りにする   | a%=5;           |a = a % 5;         |
 
 ## インクリメント・デクリメント
 
 |処理      |インクリメント・デクリメント|算術演算に書き換えると|
 |:-------:|--------------------------|----------------------|
-|aを1増やす|                         |a = a + 1;            |		
-|aを1減らす|	                     |a = a - 1;            |
+|aを1増やす| a++;                        |a = a + 1;            |		
+|aを1減らす|	a--;                     |a = a - 1;            |
 
 ---
 
