--- a/06.md
+++ b/06.md
@@ -14,13 +14,13 @@
 - Label
   - 文字表示
 - TextBox
-  - 文字列の入出力
+  - 文字列のに入力
 - Timer
-  - 指定のミリ秒ごとにプログラムを実行
-  - Interval：実行間隔。ミリ秒単位。1秒なら1000
-  - Enabled：trueで実行。falseで停止
-  - プログラムの書き方：フォームの下にあるtimer1をダブルクリック
-    - 注意！：Enabledはデフォルトでfalseで無効なので、そのままでは動かない!!
+  - 指定のミリ秒事にプログラム実行
+  - Interval：実行感覚。ミリ秒単位。１秒なら１０００
+  - Enabled：ＴＲＵＥで
+  - プログラムの書き方：
+    - 注意！：
 
 ## 演習6
 以下を試してみよう。
