--- a/07.md
+++ b/07.md
@@ -38,31 +38,31 @@ string型のstrという名前の変数を定義する。
 bool型のblという名前の変数を定義する。
 
 ```cs
-
+    bool int;
 ```
 
 int型のbという名前の変数を定義し、10を代入する。
 
 ```cs
-
+         intb=10;
 ```
 
 float型のfw2という名前の変数を定義し、-10.5を代入する。
 
 ```cs
-
+        float fw2 = -10;
 ```
 
 string型のstr2という名前の変数を定義し、「こんにちは」を代入する。
 
 ```cs
-
+    string str2="こんにちは"
 ```
 
 bool型のbl2という名前の変数を定義し、`true`を代入する。
 
 ```cs
-
+    bool bl2 ＝ true;
 ```
 
 
@@ -133,7 +133,7 @@ bool型のbl2という名前の変数を定義し、`true`を代入する。
 - 演習7-2：
 - 演習7-1：
 - 演習7-4：
-- 演習7-2：
+- 演習7-5:
 
 ### 新しく分かったことをまとめよう
 
