--- a/07.md
+++ b/07.md
@@ -3,66 +3,66 @@
 
 ## 問題点
 
-実行中に、座標に足す値を変えられないから。
+
 
 ## 解決策
 
-実行中に、足す値を変えられるようにする・・・変数を使う！！
+
 
 ## C#での変数の使い方
 
-1. 記録するデータの型と、変数名を書いて、変数を定義
-2. 変数に値を代入
-3. 変数の値を使いたい場所に、変数名を書く
+1. ?
+2. ?
+3. ?
 
 ## 変数定義の書き方
 
 int型のaという名前の変数を定義する。
 
 ```cs
-int a;
+
 ```
 
 float型のfwという名前の変数を定義する。
 
 ```cs
-float fw;
+
 ```
 
 string型のstrという名前の変数を定義する。
 
 ```cs
-string str;
+
 ```
 
 bool型のblという名前の変数を定義する。
 
 ```cs
-bool bl;
+
 ```
 
 int型のbという名前の変数を定義し、10を代入する。
 
 ```cs
-int b = 10;
+
 ```
 
 float型のfw2という名前の変数を定義し、-10.5を代入する。
 
 ```cs
-float fw2 = -10.5f;
+
 ```
 
 string型のstr2という名前の変数を定義し、「こんにちは」を代入する。
 
 ```cs
-string str2 = "こんにちは";
+
 ```
 
 bool型のbl2という名前の変数を定義し、`true`を代入する。
 
 ```cs
-bool bl2 = true;
+
 ```
 
 
@@ -76,49 +76,49 @@ bool bl2 = true;
 
 ### 何が起きる？
 
-エラー
+?
 
 ### vxの有効範囲は？
 
-定義されている波かっこの中。
+?
 
 ## 演習7-3
 クラス定義(class)の直下に、int型の変数vxを定義して、20を代入するコードを追加する。
 
 ### 演習7-2と比べてどうなった？
 
-エラーがなくなった。
+?
 
 ### 演習7-1ボタンと、演習7-2ボタンを交互に押して、それぞれ何が表示されるか？
 
-- 演習7-1・・・5, 10が表示
-- 演習7-2・・・20が表示
+- 演習7-1・・・5,10が表示
+- 演習7-2・・・
 - 分かったこと
-    - 演習7-1と7-2のvxは別の変数
+    - ?
 
 ## データの代入方法
 定義済みのint型変数aに、100を代入する。
 
 ```cs
-a = 100;
+    a=100;
 ```
 
 定義済みのfloat型変数fwに、3.14を代入する。
 
 ```cs
-fw = 3.14f;
+    fw=3.14f;
 ```
 
 定義済みのstring型変数strに、「こんにちは」を代入する。
 
 ```cs
-str = "こんにちは";
+    str="こんにちは";
 ```
 
 定義済みのbool型変数blに、falseを代入する。
 
 ```cs
-bl = false;
+
 ```
 
 
@@ -127,24 +127,24 @@ bl = false;
 
 次の順番にボタンを押して、表示される内容を記入しよう。
 - 演習7-2：20
-- 演習7-1：5, 10
+- 演習7-1：5,10
 - 演習7-2：20
 - 演習7-4：30
 - 演習7-2：30
-- 演習7-1：5, 10
+- 演習7-1：5.10
 - 演習7-4：40
 - 演習7-2：40
 
 ### 新しく分かったことをまとめよう
 
-インスタンス変数は、値を保持し続けることができる。
+?
  
 ## 変数の有効範囲
 |-              |定義する場所|有効範囲|
 |:-------------:|-----------|-------|
-|ローカル変数    |メソッドのブロック|定義したブロックの中。メソッドから出ると値は破棄|
-|インスタンス変数|クラス定義のブロック|インスタンスが有効な間は保持。アプリを終了するなどメモリから削除されたら破棄|
-|クラス変数     |インスタンス変数にstaticキーワードをつける|環境が有効な限り有効|
+|ローカル変数    |           |定義したブロックの中。メソッドから出ると値は破棄|
+|インスタンス変数|           |インスタンスが有効な間は保持。アプリを終了するなどメモリから削除されたら破棄|
+|クラス変数     |           |環境が有効な限り有効|
 
 ##	変数名の制約やルール
 - 変数名の最初の1文字目は、( )か( )
